--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "php": ">=5.4.0",
     "symfony/framework-bundle": "~2.3|~3.0",
     "doctrine/orm": "~2.3",
-    "twig/twig": "~1.5"
+    "twig/twig": "~1.5|~2.0"
   },
 
   "require-dev": {
